<resources>
    <string name="app_name">Integradora</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="no_tienes_una_cuenta_reg_strate_ahora">¿No tienes una cuenta? Regístrate ahora</string>
    <string name="login">Iniciar sesión</string>
    <string name="username">Username</string>
    <string name="password">Contraseña</string>
    <string name="ya_tienes_cuenta_inicia_sesi_n">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="register">Registro</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="agregar_nuevo_tinaco">Agregar nuevo tinaco</string>
    <string name="edit_profile" />
    <string name="nombre_del_individuo">Nombre de la persona</string>
    <string name="_000_000_0000">000 000 0000</string>
    <string name="usario_ejemplo_com">usuario@ejemplo.com</string>
    <string name="title_perfil">Perfil\n</string>
    <string name="Contraseña">Contraseña</string>
    <string name="contra">*******************</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="editar_contrase_a">Editar contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar">Cancelar</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="editar_prerfil">Editar perfil</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="introduce_tu_correo_electr_nico_y_te_enviaremos_un_correo">Introduce tu correo electrónico para enviarte un correo</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="volver_al_inicio_de_sesi_n">Volver al inicio de sesión</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="cesor_5">Cesor 5</string>
    <string name="tinacos_actuales">Tinacos actuales</string>
    <string name="hace_10_minutos">Hace 10 minutos</string>
    <string name="este_es_el_mensaje_de_la_notificaci_n">Este es el mensaje de la notificación</string>
    <string name="notification_icon_desc">notification_icon_desc</string>
    <string name="no_notifications_icon">no_notifications_icon</string>
    <string name="no_hay_tinacos_icon">no_hay_tinacos_icon</string>
    <string name="no_hay_tinacos">no_hay_tinacos</string>
    <string name="no_hay_actuelamente_tinacos">No hay actualamente tinacos</string>
    <string name="opciones">Opciones</string>
    <string name="nivel_del_agua">Nivel del agua</string>
    <string name="editar">Editar</string>
    <string name="nombre_del_tinaco">Nombre del tinaco</string>
    <string name="editar_mi_tinaco">Editar Mi Tinaco</string>
    <string name="registrarse">Registrarse</string>
    <string name="sensor">Sensor</string>
</resources>