<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave9"
    tools:context=".Login">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="1000dp"
        android:layout_height="900dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/olachida" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="467dp"
            android:orientation="vertical"
            android:padding="32dp">

            <!-- Título -->
            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="20dp"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="36sp"
                android:textStyle="bold" />

            <!-- Campo de Usuario con icono -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="User Icon"
                    android:src="@drawable/ic_user" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/correo_electr_nico"
                    android:maxLength="40"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Campo de Contraseña con icono -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="Lock Icon"
                    android:src="@drawable/ic_lock" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:maxLength="40"
                    android:paddingStart="8dp"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/black" />
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/purple"
                    android:text="@string/login"
                    android:textSize="18sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large" />
            </FrameLayout>


            <TextView
                android:id="@+id/registrationPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/no_tienes_una_cuenta_reg_strate_ahora"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="onForgotregistrationClick"
                />

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onForgotPasswordClick"
                android:text="@string/olvidaste_tu_contrase_a"
                android:textSize="14sp"
                android:textStyle="italic" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
